--- a/src/app/administration/new-user-form/new-user-form.component.html
+++ b/src/app/administration/new-user-form/new-user-form.component.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col">
-    <input type="text" class="form-control" placeholder="First name" [(ngModel)]="user.firstName">
+    <input type="text" class="form-control" placeholder="First name" [(ngModel)]="user.firstName" id="userFirstName">
   </div>
   <div class="col">
-    <input type="text" class="form-control" placeholder="Last name" [(ngModel)]="user.lastName">
+    <input type="text" class="form-control" placeholder="Last name" [(ngModel)]="user.lastName" id="userLastName">
   </div>
   <div class="col">
-    <input type="text" class="form-control" placeholder="Email" [(ngModel)]="user.email">
+    <input type="text" class="form-control" placeholder="Email" [(ngModel)]="user.email" id="userEmail">
   </div>
   <div class="col">
-    <input type="password" class="form-control" placeholder="Password" [(ngModel)]="user.password">
+    <input type="password" class="form-control" placeholder="Password" [(ngModel)]="user.password" id="userPassword">
   </div>
   <div class="col">
-    <button class="btn btn-success" (click)="createUser()">Save</button>
+    <button class="btn btn-success" (click)="createUser()" id="saveButton">Save</button>
   </div>
 </div>
