--- a/src/app/administration/users-list/users-list.component.html
+++ b/src/app/administration/users-list/users-list.component.html
@@ -2,7 +2,7 @@
   <h1>System Users</h1>
 </section>
 <section>
-  <button (click)="openAddUser()">Add User</button>
+  <button (click)="openAddUser()" id="addUserButton">Add User</button>
 </section>
 <hr/>
 <section>
@@ -13,7 +13,7 @@
   </div>
 </section>
 <section>
-  <table class="table table-hover">
+  <table class="table table-hover" id="usersTable">
     <thead>
     <tr>
       <th scope="col">id</th>
@@ -23,7 +23,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let user of users">
+    <tr *ngFor="let user of users" id="{{user.id}}">
       <th scope="row">{{user.id}}</th>
       <td>{{user.firstName}}</td>
       <td>{{user.lastName}}</td>
